--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-split": "2.0.14",
+    "react-table": "7.8.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
