--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-split": "2.0.14",
     "react-table": "7.8.0",
+    "sass": "1.55.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
