--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-split": "2.0.14",
     "react-table": "7.8.0",
     "sass": "1.55.0",
-    "typescript": "^4.8.3",
+    "typescript": "4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
